--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
 </head>
 <body>
     <header>
+        <!-- navbar section  -->
         <nav class="nav-bar">
             <h3 class="nav-title inter primary-color">LOGO</h3>
             <button class="btn-primary raleway">Sign Up</button>
         </nav>
+        <!-- banner section  -->
         <div class="banner-container">
-            <h3 class="banner-title raleway">Cool Dark UI Template for <br>Webflow Agencies!</h3>
+            <h3 class="banner-title raleway main-color">Cool Dark UI Template for <br>Webflow Agencies!</h3>
             <button class="btn-primary raleway">Stay Focused</button>
         </div>
     </header>
     <main>
-
+        <!-- action section  -->
+        <section class="action-container">
+            <div class="action-info">
+                <h3 class="action-title main-color">See It in Action</h3>
+                <p class="action-description secondary-color">Explore the live preview and imagine your <br>brand in this bold new look.</p>
+                <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <div class="action-img">
+                <img src="/Assets/wc-mini.png" alt="">
+            </div>
+            
+        </section>
     </main>
     <footer>
 
