added productive users section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
             </div>
             
         </section>
+        <section class="productive-users-container">
+            <h1 class="productive-title main-color raleway">Joined Thousands of Productive Users</h1>
+            <div class="productive-info inter">
+                <div class="productive-info-container">
+                    <h1 class="quantity primary-color">50K</h1>
+                    <p class="subtitle secondary-color">Active Users</p>
+                </div>
+                <div class="productive-info-container">
+                    <h1 class="quantity primary-color">2M+</h1>
+                    <p class="subtitle secondary-color">Focus Sessions</p>
+                </div>
+                <div class="productive-info-container">
+                    <h1 class="quantity primary-color">95%</h1>
+                    <p class="subtitle secondary-color">Satisfaction Rate</p>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
 
