added let's get in touch section

--- a/index.html
+++ b/index.html
@@ -148,13 +148,42 @@
           <p class="focus-description secondary-color">
             This template instantly leveled up our presence.” – Studio Vertex
           </p>
-          <button class="btn-primary">Ger Started Free</button>
+          <button class="btn-primary raleway">Get Started Free</button>
         </div>
         <div class="focus-img">
           <img src="/Assets/wc-big.png" alt="" />
         </div>
       </section>
-    </main>
+      <!-- let's get in touch section  -->
+      <section class="form-container">
+        <div class="form-colum">
+            <h3 class="form-title main-color raleway">Let’s Get in <br />Touch</h3>
+        </div>
+        <div class="form-colum">
+          <form>
+            <div class="input-container inter">
+              <label for="email">Email</label><br>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="example@email.com"
+              /><br />
+              <label for="name">Name</label><br>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="full name"
+              /><br />
+              <label for="massage">Message</label><br>
+              <textarea name="massage" id="massage" class="secondary-color">write your message....</textarea><br>
+              <input type="submit" class="btn-primary raleway" value="Get in Touch">
+            </div>
+          </form>
+        </div>
+      </section>
+    </main>    
     <footer></footer>
   </body>
 </html>
