add hover on button and others modify

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
       <!-- action section  -->
-      <section class="action-container">
+      <section class="action-container raleway">
         <div class="action-info">
           <h3 class="action-title main-color">See It in Action</h3>
           <p class="action-description secondary-color">
@@ -177,13 +177,26 @@
                 placeholder="full name"
               /><br />
               <label for="massage">Message</label><br>
-              <textarea name="massage" id="massage" class="secondary-color">write your message....</textarea><br>
+              <textarea name="massage" id="massage" class="inter secondary-color">write your message....</textarea><br>
               <input type="submit" class="btn-primary raleway" value="Get in Touch">
             </div>
           </form>
         </div>
       </section>
     </main>    
-    <footer></footer>
+    <footer>
+      <div class="footer-info inter">
+        <h3 class="footer-title primary-color ">LOGO</h3>
+        <p class="footer-description secondary-color">Ready to elevate your online presence? Contact us today to discuss <br>your project and discover how we can bring your vision to life.</p>
+        <div class="contact-menu ">
+          <ul>
+            <li><a href="" class="secondary-color">Home</a></li>
+            <li><a href="" class="secondary-color">About</a></li>
+            <li><a href="" class="secondary-color">How it Works</a></li>
+            <li><a href="" class="secondary-color">Services</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
