--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button class="btn-primary">Launch Live Preview</button>
         </div>
         <div class="action-img">
-          <img src="/Assets/wc-mini.png" alt="" />
+          <img src="Assets/wc-mini.png" alt="" />
         </div>
       </section>
       <!-- productive users section  -->
@@ -64,11 +64,11 @@
           <!-- card-1  -->
           <div class="users-card">
             <div class="star">
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
             </div>
             <div class="feedback-info">
               <h3 class="feedback-title main-color">Loved by Designers</h3>
@@ -79,7 +79,7 @@
             </div>
             <div class="reviewer-container">
               <div class="reviewer-img">
-                <img src="/Assets/avatar.png" alt="" />
+                <img src="Assets/avatar.png" alt="" />
               </div>
               <div class="reviewer-info">
                 <h4 class="reviewer-name">Reviewer name</h4>
@@ -90,11 +90,11 @@
           <!-- card-2  -->
           <div class="users-card">
             <div class="star">
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
             </div>
             <div class="feedback-info">
               <h3 class="feedback-title main-color">Loved by Designers</h3>
@@ -105,7 +105,7 @@
             </div>
             <div class="reviewer-container">
               <div class="reviewer-img">
-                <img src="/Assets/avatar.png" alt="" />
+                <img src="Assets/avatar.png" alt="" />
               </div>
               <div class="reviewer-info">
                 <h4 class="reviewer-name">Reviewer name</h4>
@@ -116,11 +116,11 @@
           <!-- card-3  -->
           <div class="users-card">
             <div class="star">
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
-              <img src="/Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
+              <img src="Assets/icon-star.png" alt="" />
             </div>
             <div class="feedback-info">
               <h3 class="feedback-title main-color">Loved by Designers</h3>
@@ -131,7 +131,7 @@
             </div>
             <div class="reviewer-container">
               <div class="reviewer-img">
-                <img src="/Assets/avatar.png" alt="" />
+                <img src="Assets/avatar.png" alt="" />
               </div>
               <div class="reviewer-info">
                 <h4 class="reviewer-name">Reviewer name</h4>
