--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button class="btn-primary">Launch Live Preview</button>
         </div>
         <div class="action-img">
-          <img src="Assets/wc-mini.png" alt="" />
+          <img src="./Assets/wc-mini.png" alt="" />
         </div>
       </section>
       <!-- productive users section  -->
