--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <button class="btn-primary raleway">Get Started Free</button>
         </div>
         <div class="focus-img">
-          <img src="/Assets/wc-big.png" alt="" />
+          <img src="Assets/wc-big.png" alt="" />
         </div>
       </section>
       <!-- let's get in touch section  -->
